--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-handlebars": "^3.1.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "mongoose": "^5.7.10",
     "morgan": "~1.9.1"
   }
 }
