--- a/database-seed/Dockerfile
+++ b/database-seed/Dockerfile
@@ -1,4 +1,4 @@
 FROM mongo
 
 COPY ./ecommerce ./ecommerce
-CMD mongorestore -d ecommerce ./ecommerce
+CMD mongorestore --host mongo --port 27017 --db shopdata ./ecommerce
