--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 DATABASE='mongodb://localhost/'
 PORT=4000
-USERNAME_GMAIL='hoangvanphuc16@gmail.com'
-PASSWORD_GMAIL='kocanbit'
+USERNAME_GMAIL=''
+PASSWORD_GMAIL=''
