dùng yandex thay thế gmail

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 DATABASE='mongodb://localhost/'
 PORT=4000
-USERNAME_GMAIL=''
-PASSWORD_GMAIL=''
+USERNAME_YANDEX='tanphuc@yandex.com'
+PASSWORD_YANDEX='qweasdzxc1!'
