--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,4 @@ DATABASE='mongodb://localhost/'
 PORT=4000
 USERNAME_YANDEX='tanphuc@yandex.com'
 PASSWORD_YANDEX='qweasdzxc1!'
+HOST_MAIL='smtp.yandex.com'
