--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.7.10",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.4.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
