--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-flash-notification": "^0.5.0",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "hbs": "~4.0.4",
