--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "~1.9.1",
     "nodemailer": "^6.4.2",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "stripe": "^7.15.0"
   }
 }
