--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,7 @@ DATABASE='mongodb://localhost/'
 PORT=4000
 USERNAME_YANDEX='tanphuc@yandex.com'
 PASSWORD_YANDEX='qweasdzxc1!'
+
+CLOUD_NAME:admin-ecommerce
+CLOUD_API_KEY:121367684254782
+CLOUD_SECRET:XKbujaQhWUoLhS94wKLQffigB9M
