--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.18.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "datauri": "^2.0.0",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
